# rust-search-text

./: Cargo.toml
src/: hello.txt  main.rs  name.txt
