[package]
name = "ripgrep-lite"
version = "0.1.0"
authors = ["Ilyosbek ilyosbek@llamacommerce.io"]
description = "Ilyosbek's command-line search tool"
license = "MIT"
repository = "https://github.com/your-username/ripgrep-lite"
homepage = "https://github.com/your-username/ripgrep-lite"
keywords = ["search", "grep", "command-line"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
regex = "1.8"
walkdir = "2.4"